--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.28.0",
     "eslint-plugin-vuejs-accessibility": "^2.1.0",
     "nuxt": "^3.6.2",
     "prettier": "^3.1.0",
