--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:js": "eslint --ext \".ts,.vue,.cjs,.js\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
+    "upgrade-deps": "yarn upgrade-interactive --latest"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.2",
